# python-challenge

./: .gitignore  .pre-commit-config.yaml  level0.py  level1.py  level10.py  level11.py  level12.py  level13.py  level14.py  level15.py  level16.py  level17.py  level17.xml  level18.py  level19.py  level2.py  level20.py  level21.py  level22.py  level23.py  level24.py  level25.py  level26.py  level27.py  level28.py  level29.py  level3.py  level30.py  level31.py  level32.py  level33.py  level4.py  level5.py  level6.py  level7.py  level8.py  level9.py  pyproject.toml
