[tool.poetry]
name = "python-challenge"
version = "0.1.0"
description = ""
authors = ["stealthmate <stealthmate1233@gmail.com>"]
readme = "README.md"
packages = [{include = "python_challenge"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
